# CMakeProject1_delete

./: CMakeLists.txt  CMakePresets.json
CMakeProject1/: CMakeLists.txt  CMakeProject1_delete.cpp  CMakeProject1_delete.h  Library.cpp  Library.h
CMakeProject1_delete/: CMakeLists.txt  CMakeProject1_delete.cpp
